documents: add missing include to the convocation

--- a/prologin/documents/templates/documents/convocation-finale.tex
+++ b/prologin/documents/templates/documents/convocation-finale.tex
@@ -1,4 +1,4 @@
-{% load i18n latex %}{% autoescape off %}
+{% load i18n latex add_days %}{% autoescape off %}
 \documentclass[a4paper,11pt]{article}
 \usepackage{prologin-letter}
 {% include "documents/stub-preamble.tex" %}
