documents: external organizers: add pseudo & tshirt size

--- a/prologin/documents/templates/documents/orgas-externes.tex
+++ b/prologin/documents/templates/documents/orgas-externes.tex
@@ -7,7 +7,7 @@
 
 \begin{document}
 
-{\setstretch{2.0}
+{\setstretch{1.9}
 Je soussigné (prénom, nom) : \hrulefill
 
 Login : \hrulefill
@@ -19,6 +19,9 @@ Adresse e-mail : \hrulefill
 Numéro de téléphone : \hrulefill
 
 Nom d'utilisateur sur \texttt{prologin.org} : \hrulefill
+
+Pseudo : \hrulefill \hspace{0.1cm}
+Taille de T-shirt : \hrulefill
 
 }
 
@@ -55,7 +58,7 @@ Accueil & Déco & Jeux & Réveil & Bataille & Mousse & Banquet\tabularnewline
 
 Commentaires ou informations supplémentaires :
 
-\vspace{3.5cm}
+\vspace{3cm}
 
 Date et signature :
 
