documents: fix liste-appel.tex and various other, views.py not fully fixed yet

--- a/prologin/documents/templates/documents/badges.tex
+++ b/prologin/documents/templates/documents/badges.tex
@@ -22,7 +22,7 @@
   \noindent
   \begin{longtable}[c]{|p{8.4cm}|p{8.4cm}|}
     \hline
-    {% if organizers != None %}
+    {% if organizers %}
       {% for organizer in organizers %}
         \begin{picture}(8.2,5.5)
           \includegraphics[width=8.2cm]{logo{{ year }}}
